--- a/index.html
+++ b/index.html
@@ -10,44 +10,47 @@
     <link rel="stylesheet" href= "assets/css/reset.css" >
     <link rel="stylesheet" href= "assets/css/style.css" >
 </head>
-<body>
+<body background= "assets/images/hangman.jpg">
 
     <div class="container">
         <div class="jumbotron">
-            <h1>The Hangman Game!</h1>
+            <h1 id="Name">Flowers Hangman Game!</h1>
             <p>Guess the letters!!!</p>
         </div>
+        <p>PRESS ANY KEY TO GET</p>
+        <p>STARTED!!!!</p>
+        <br>
     <div class = "container">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Word to Guess</h3>
+                <h3 class="panel-title">CURRENT WORD</h3>
             </div>
             <div class="panel-body">
                 <h2 id= "wordToGuess">_ _ _ _ _ _ _</h2>
             </div>
         </div>
-
+        <br>
         <div class="panel panel-default">
             <div class="panel-body">
-                Wrong Guesses: <span id="wrongGuesses"></span>
+                LETTERS ALREADY GUESSED: <span id="wrongGuesses"></span>
             </div>
         </div>
-    
+        <br>
         <div class="panel panel-default">
             <div class="panel-body">
-                Guesses Left: <span id="numGuesses">9</span>
+                GUESSES LEFT: <span id="numGuesses">9</span>
             </div>
         </div>
- 
+        <br>
         <div class="panel panel-default">
             <div class="panel-body">
-                Win Counter: <span id="winCounter">0</span>
+                WINS: <span id="winCounter">0</span>
             </div>
         </div>
-
+        <br>
         <div class="panel panel-default">
             <div class="panel-body">
-                Loss Counter: <span id="lossCounter">0</span>
+                LOSS: <span id="lossCounter">0</span>
             </div>
         </div>
     </div>
