--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>The Hangman-Game</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href= "assets/css/reset.css" >
-    <link rel="stylesheet" href= "assets/css/style.css" >
+    <link rel="stylesheet" href= "./assets/css/reset.css" >
+    <link rel="stylesheet" href= "./assets/css/style.css" >
 </head>
-<body background= "assets/images/hangman.jpg">
+<body background= "./assets/images/hangman.jpg">
 
     <div class="container">
         <div class="jumbotron">
